# fancyndex

./: .gitignore  CMakeLists.txt  Cargo.toml  Fancyndex.toml  LICENSE  README.md  Rocket.toml  clearCache.sh  config.js  nginx_conf
Rust/fancyndex/: Cargo.toml
Rust/fancyndex/src/: config.toml  main.rs
Rust/fancyndex/src/filesystem/: directory.rs  file.rs  mod.rs
Rust/fancyndex/templates/: index.hbs
conf/: config.yaml  speedtest.js
old/: main.rs  old_makefile
old/api/: mod.rs
old/filesystem/: mod.rs
old/src/: main_old.rs
old/src/filesystem/: directory.rs  file.rs
old/utils/: error.rs
oldV0.9/: Cargo.toml  Fancyndex.toml
oldV0.9/src/server/: api.rs  file.rs
oldV0.9/web/css/: index.css
oldV0.9/web/templates/: header.html.tera  hidden_var.html.tera
src/: API.cpp  API.hpp  api.rs  config.rs  directory.cpp  directory.hpp  file.cpp  file.hpp  filesystem.cpp  filesystem.hpp  index.cpp  index.hpp  io.rs  main.cpp  main.rs  symbols.hh  symlink.cpp  symlink.hpp  test.cpp  utils.rs  walker.rs
src/api/: error.rs  home.rs  mod.rs
src/conf/: mod.rs
src/filesystem/: directory.rs  entries.rs  entry.rs  file.rs  mod.rs  scanner.rs  unsafepath.rs  walkdir.rs
src/server/: api.rs  asset.rs  file.rs  home.rs  mod.rs
src/utils/: error.rs  io.rs  mod.rs
templates/: header.hbs  index.tera
very_old/: config.toml
very_old/src/filesystem/: mod.rs
web/css/: index.css
web/js/: index.js
web/templates/: footer.html.tera  header.hbs  header.html.tera  header.tera  hidden_var.tera  index.hbs  index.html.tera  index.tera  macros.html.tera  scripts.hbs  test.hbs
www/: index.html
www/css/: index.css
www/js/: index.js  popper-1.12.6.min.js
www/templates/: header.hbs  index.hbs  index.tera  macros.html.tera  scripts.hbs
