[package]
name = "fancyndex"
version = "0.1.0"
authors = ["zxvfxwing <zxvfxwing@protonmail.com>"]

[dependencies]
rocket = { version = "0.3.3", features = ["tls"] }
rocket_codegen = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
chrono = "0.4.0"
crossbeam = "0.3.0"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates", "json"]
