[package]
name = "fancyndex"
version = "0.1.0"
authors = ["zxvfxwing <zxvfxwing@protonmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2.0"
toml = "0.4.5"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rayon = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "tera_templates"]
