[package]
name = "fancyndex"
version = "0.1.0"
authors = ["zxvfxwing <zxvfxwing@protonmail.com>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates"]
